# trusted-devcontainers

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: release.yml
.github/workflows/: ci.yml  release.yml
assets/payload/: tool-versions.env
assets/payload/configs/node/.devcontainer/: devcontainer.json
assets/payload/configs/solidity-foundry-node/.devcontainer/: devcontainer.json
assets/payload/configs/solidity-foundry/.devcontainer/: devcontainer.json
assets/payload/images/base/: Dockerfile
assets/payload/images/node/: Dockerfile
assets/payload/images/solidity-foundry/: Dockerfile
assets/payload/images/solidity-foundry-node/: Dockerfile
docs/: lifecycle.md  packaging.md  security.md
payload/: tool-versions.env
payload/configs/base/.devcontainer/: devcontainer.json
payload/configs/solidity-foundry-node/.devcontainer/: devcontainer.json
payload/configs/solidity-foundry/.devcontainer/: devcontainer.json
payload/images/base/: Dockerfile
payload/images/node/: Dockerfile
payload/images/scripts/: install-foundry.sh  install-node.sh  install-solc-select.sh
payload/images/solidity-foundry/: Dockerfile
payload/images/solidity-foundry-node/: Dockerfile
src/: cli.rs  github.rs  main.rs  model.rs  payload.rs  process.rs  workflow.rs
